Add export car maintenance records
